# Wordy

./: .gitignore  README.md
Resources/: Words100000_Comma.txt  Words100000_NewLine.txt  Words10000_Comma.txt  Words10000_NewLine.txt  Words1e+06_Comma.txt  Words1e+06_NewLine.txt
Tests/: CMakeLists.txt  Test.cpp  generateStringTextInput.hpp
Tests/WordCounter_Test/Delimiter/: TEST_DELIMITER_COMMA.hpp  TEST_DELIMITER_NEWLINE.hpp  TEST_DELIMITER_SEMICOLON.hpp  TEST_DELIMITER_SPACE.hpp
Tests/WordCounter_Test/Filter/: TEST_FILTER_ALL.hpp  TEST_FILTER_ALPHA.hpp  TEST_FILTER_ALPHANUM.hpp  TEST_FILTER_ALPHANUM_SPACE.hpp  TEST_FILTER_LOWERCASE.hpp  TEST_FILTER_NUM.hpp  TEST_FILTER_SPACE.hpp  TEST_FILTER_UPPERCASE.hpp
Tests/WordCounter_Test/Input/FileInput/: TEST_FILEINPUT_100000_COMMA.hpp  TEST_FILEINPUT_100000_NEWLINE.hpp  TEST_FILEINPUT_10000_COMMA.hpp  TEST_FILEINPUT_10000_NEWLINE.hpp  TEST_FILEINPUT_1e06_COMMA.hpp  TEST_FILEINPUT_1e06_NEWLINE.hpp  TEST_FILEINPUT_1e07_COMMA.hpp  TEST_FILEINPUT_1e07_NEWLINE.hpp  TEST_FILEINPUT_1e08_COMMA.hpp  TEST_FILEINPUT_1e08_NEWLINE.hpp
Tests/WordCounter_Test/Input/TextInput/: TEST_TEXTINPUT_COMMA.hpp  TEST_TEXTINPUT_NEWLINE.hpp
Tests/WordCounter_Test/Keywords/: TEST_KEYWORD_SMILEY.hpp  TEST_KEYWORD_WORD.hpp
WordCounter/: CMakeLists.txt
WordCounter/include/: AbstractWordCounterBuilder.h  Assert.h  BaseWordCounter.h  Filter.h  IWordCounter.h  WordCounter.h  WordCounterBuilder.h  WordCounterFactory.h  WordCounterFile.h  WordCounterInputBuilder.h  WordCounterSettingsBuilder.h  WordCounterText.h
WordCounter/src/: AbstractWordCounterBuilder.cpp  BaseWordCounter.cpp  WordCounter.cpp  WordCounterBuilder.cpp  WordCounterFactory.cpp  WordCounterFile.cpp  WordCounterInputBuilder.cpp  WordCounterSettingsBuilder.cpp  WordCounterText.cpp
Wordy/: CMakeLists.txt  main.cpp
Wordy/include/: Application.h  Config.h  IGUI.h  QtGUI.h  wxWidgetsGUI.h
Wordy/include/wxWidgets/: wxApplication.h  wxCustomEvent.h  wxMainFrame.h
Wordy/src/: Application.cpp  Config.cpp  QtGUI.cpp  wxWidgetsGUI.cpp
Wordy/src/wxWidgets/: wxApplication.cpp  wxCustomEvent.cpp  wxMainFrame.cpp
